--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -129,6 +129,14 @@
   background: transparent;
 }
 
+.pokemon-image-container.active {
+  display: flex;
+}
+
+.pokemon-image-container.hidden {
+  display: none;
+}
+
 .pokemon-image {
   max-width: 100%;
   max-height: 100%;
@@ -148,6 +156,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.sketchfab-embed-wrapper.active {
+  display: flex;
+}
+
+.sketchfab-embed-wrapper.hidden {
+  display: none;
 }
 
 .sketchfab-embed-wrapper iframe {
